{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 256,
  "lineage": "9412fc4f-acfc-7a2a-6094-3d85db238386",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ceb9c1110f52ae94",
            "association_id": "eipassoc-0abd0eef68e03310a",
            "domain": "vpc",
            "id": "eipalloc-0ceb9c1110f52ae94",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f39cf181c900a3df",
            "private_dns": "ip-10-0-1-4.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-13-125-98-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.98.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d806d1ddaa94d5f",
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:instance/i-00624c6e10b5b6432",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00624c6e10b5b6432",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088004db6d2e74d4e",
            "private_dns": "ip-10-0-1-239.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-3-35-238-194.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.238.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e14929ffb1200d0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6719b7c839b983e",
            "tags": {
              "Name": "public-web-1"
            },
            "tags_all": {
              "Name": "public-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de17528936fb979e"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_parameter_group.mysql-parameters",
            "aws_db_subnet_group.mysql-subnet",
            "aws_key_pair.mykeypair",
            "aws_security_group.mysql-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-web",
            "aws_subnet.public-web",
            "aws_vpc.web",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d806d1ddaa94d5f",
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:instance/i-0b86699292e47082e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b86699292e47082e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d00dfc662441559",
            "private_dns": "ip-10-0-2-9.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.9",
            "public_dns": "ec2-3-35-233-132.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.233.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c687320dcaacbd2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4f52c5a90e5d0e6",
            "tags": {
              "Name": "public-web-2"
            },
            "tags_all": {
              "Name": "public-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de17528936fb979e"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_parameter_group.mysql-parameters",
            "aws_db_subnet_group.mysql-subnet",
            "aws_key_pair.mykeypair",
            "aws_security_group.mysql-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-web",
            "aws_subnet.public-web",
            "aws_vpc.web",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d806d1ddaa94d5f",
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:instance/i-0ee5ba244ff331443",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee5ba244ff331443",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-006f3e4b638a25a4f",
            "private_dns": "ip-10-0-1-139.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-3-36-106-132.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.106.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e1f481bcbd3d2ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6719b7c839b983e",
            "tags": {
              "Name": "public-web-3"
            },
            "tags_all": {
              "Name": "public-web-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de17528936fb979e"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_parameter_group.mysql-parameters",
            "aws_db_subnet_group.mysql-subnet",
            "aws_key_pair.mykeypair",
            "aws_security_group.mysql-sg",
            "aws_security_group.web-sg",
            "aws_subnet.private-web",
            "aws_subnet.public-web",
            "aws_vpc.web",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:internet-gateway/igw-0b4b2275be53609e0",
            "id": "igw-0b4b2275be53609e0",
            "owner_id": "756008830886",
            "tags": {
              "Name": "web-gw"
            },
            "tags_all": {
              "Name": "web-gw"
            },
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ceb9c1110f52ae94",
            "connectivity_type": "public",
            "id": "nat-0bae290446088ff57",
            "network_interface_id": "eni-0f39cf181c900a3df",
            "private_ip": "10.0.1.4",
            "public_ip": "13.125.98.57",
            "subnet_id": "subnet-0b6719b7c839b983e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.web-gw",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:route-table/rtb-0c8ebaec8147d6131",
            "id": "rtb-0c8ebaec8147d6131",
            "owner_id": "756008830886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4b2275be53609e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-web-rt"
            },
            "tags_all": {
              "Name": "public-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:route-table/rtb-00925098079f00bdf",
            "id": "rtb-00925098079f00bdf",
            "owner_id": "756008830886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bae290446088ff57",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-private"
            },
            "tags_all": {
              "Name": "web-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.web-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088cde9431586ed9d",
            "route_table_id": "rtb-0c8ebaec8147d6131",
            "subnet_id": "subnet-0b6719b7c839b983e"
          },
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.public-web",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5206a6fd2c06d30",
            "route_table_id": "rtb-0c8ebaec8147d6131",
            "subnet_id": "subnet-0d4f52c5a90e5d0e6"
          },
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.public-web",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195603e9b7ed04bc",
            "route_table_id": "rtb-00925098079f00bdf",
            "subnet_id": "subnet-08f89ae34cbb72100"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.web-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.web-private",
            "aws_subnet.private-web",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee57d77af917be85",
            "route_table_id": "rtb-00925098079f00bdf",
            "subnet_id": "subnet-0b9021643068f3115"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.web-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.web-private",
            "aws_subnet.private-web",
            "aws_subnet.public-web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:security-group/sg-0d5f14199ee60f714",
            "description": "security group that allows mysql and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5f14199ee60f714",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysql",
            "name_prefix": "",
            "owner_id": "756008830886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mysql"
            },
            "tags_all": {
              "Name": "allow-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:security-group/sg-0de17528936fb979e",
            "description": "security group that allows ssh,http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de17528936fb979e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "756008830886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-http"
            },
            "tags_all": {
              "Name": "allow-ssh-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-08f89ae34cbb72100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f89ae34cbb72100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-web1"
            },
            "tags_all": {
              "Name": "private-web1"
            },
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0b9021643068f3115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9021643068f3115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-web2"
            },
            "tags_all": {
              "Name": "private-web2"
            },
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0b6719b7c839b983e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6719b7c839b983e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-web1"
            },
            "tags_all": {
              "Name": "public-web1"
            },
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0d4f52c5a90e5d0e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4f52c5a90e5d0e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-web2"
            },
            "tags_all": {
              "Name": "public-web2"
            },
            "vpc_id": "vpc-0c0409404b4662db7"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:vpc/vpc-0c0409404b4662db7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086b8942dd07cd7da",
            "default_route_table_id": "rtb-0c0e2fb623d710dfb",
            "default_security_group_id": "sg-07b1263f3286646eb",
            "dhcp_options_id": "dopt-09c88f696434c58c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0409404b4662db7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0e2fb623d710dfb",
            "owner_id": "756008830886",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}